--- a/Tercera entrega del proyecto final/src/views/signup.html
+++ b/Tercera entrega del proyecto final/src/views/signup.html
@@ -51,7 +51,7 @@
                 </div>
 
                 <div class="form-group">
-                    <input name="photo" placeholder="Photo" class="form-control" type="file" required />
+                    <input name="photo" placeholder="Url Photo" class="form-control" type="text" required />
                 </div>
                 
 
