--- a/Tercera entrega del proyecto final/src/views/form.hbs
+++ b/Tercera entrega del proyecto final/src/views/form.hbs
@@ -77,7 +77,7 @@
 
 <div class="product-form">
 <h1>Carga tu producto</h1>
-<form id="productForm" method="post" action="/login/products">
+<form id="productForm" method="post" action="/login/addProduct">
   <input type="text" name="title" placeholder="Nombre de producto">
   <input type="number" step="0.01" name="price" placeholder="Precio">
   <input type="text" name="thumbnail" placeholder="Url de la imagen">
