--- a/Tercera entrega del proyecto final/src/views/form.hbs
+++ b/Tercera entrega del proyecto final/src/views/form.hbs
@@ -34,6 +34,41 @@
 .product-table td {
   text-align: left;
 }
+
+.cart-container {
+  position: fixed;
+  bottom: 0;
+  left: 50%;
+  transform: translateX(-50%);
+  background-color: #fff;
+  border: 1px solid #ccc;
+  box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.1);
+  padding: 20px;
+  font-family: Arial, sans-serif;
+  font-size: 16px;
+  color: #333;
+}
+
+.cart-table {
+  width: 100%;
+  border-collapse: collapse;
+  margin-top: 20px;
+}
+
+.cart-table th,
+.cart-table td {
+  border: 1px solid black;
+  padding: 10px;
+}
+
+.cart-table th {
+  background-color: #cccccc;
+  text-align: center;
+}
+
+.cart-table td {
+  text-align: left;
+}
    </style>
 
 <form action="/logout" method="get" class="user-form">
@@ -68,7 +103,9 @@
       <td><img src="{{this.thumbnail}}"></td>
       <td>
         <form method="POST" action="/addProduct">
-          <input type="hidden" name="productId" value="{{this.id}}">
+          <input type="hidden" name="productId" value="{{this._id}}">
+          <input type="hidden" name="title" value="{{this.title}}">
+          <input type="hidden" name="price" value="{{this.price}}">
           <button type="submit">Agregar al carrito</button>
         </form>
       </td>
@@ -76,6 +113,31 @@
     {{/each}}
   </tbody>
 </table>
+
+<div class="cart-container">
+  <table class="cart-table">
+    <thead>
+      <tr>
+        <th></th>
+        <th>Precio</th>
+        <th>Descripción</th>
+      </tr>
+    </thead>
+    <tbody>
+      {{#each cartProducts}}
+      <tr>
+        <td>{{this.title}}</td>
+        <td>{{this.price}}</td>
+        <td>
+          <form method="POST" action="/buyProducts">
+            <input type="hidden" name="productId" value="{{this._id}}">
+            <button type="submit">Comprar</button>
+          </form>
+        </td>
+      </tr>
+      {{/each}}
+    </tbody>
+  </table>
 
 
 
