--- a/Proyecto Final/src/views/buy-success.hbs
+++ b/Proyecto Final/src/views/buy-success.hbs
@@ -57,7 +57,7 @@
         location.href = pagina;
     } 
     function volver() {
-        setTimeout(() => redireccionar('/login/adminproductos'), 4000);
+        setTimeout(() => redireccionar('/login/products'), 4000);
     }
     volver();
 </script>
