--- a/Proyecto Final/src/views/empty-cart.hbs
+++ b/Proyecto Final/src/views/empty-cart.hbs
@@ -7,7 +7,7 @@
         location.href = pagina;
     }
     function volver() {
-        setTimeout(() => redireccionar('/login/adminproductos'), 1000);
+        setTimeout(() => redireccionar('/login/products'), 1000);
     }
     volver();
 </script>
