--- a/Proyecto Final/src/views/login-error.hbs
+++ b/Proyecto Final/src/views/login-error.hbs
@@ -12,6 +12,6 @@
     } 
     function volver() {
         console.log('volver');
-        redireccionar('/')
+        redireccionar('/login')
     }
 </script>
