--- a/Proyecto Final/src/views/login-ok.hbs
+++ b/Proyecto Final/src/views/login-ok.hbs
@@ -39,7 +39,7 @@
                 location.href = pagina;
             } 
             function volver() {
-                setTimeout(() => redireccionar('/login/adminproductos'), 2000);
+                setTimeout(() => redireccionar('/login/products'), 2000);
             }
             volver();
         </script>
